Rename SecurityManager to ArchuraSecurityManager.
- Use environment and tenant based classes.